Fixing layout issues with management people grid

--- a/web/app/themes/vestedworld/assets/styles/pages/_about.scss
+++ b/web/app/themes/vestedworld/assets/styles/pages/_about.scss
@@ -82,6 +82,12 @@
       min-width: 150px;
       position: relative;
       padding: 30px 0 80px;
+
+      h2 {
+        max-width: 200px;
+        display: inline-block;
+      }
+
       @include min-screen(860px) {
         order: 0;
       }
